Update MapSearchPage to new standards